# eunice_challenge

./: Makefile  README.md  README_challenge.md  docker-compose.yaml  docker-compose.yml
services/archive/: Dockerfile  docker-compose-archive.yaml  pyproject.toml
services/archive/app/: __init__.py
services/archive/app/articles/: __init__.py  model.py  repository.py  service.py
services/archive/app/articles/entrypoint/rest/: __init__.py  model.py  routes.py
services/archive/app/common/: exception.py  model.py
services/archive/app/common/repository/: __init__.py  model.py  repository_interface.py
services/archive/logger/: __init__.py  logger.py
services/archive/tests/: test_archive_api_script.py
services/db/: docker-compose-db.yaml
services/db/migrations/: init.sql
services/parser/: docker-compose-parser.yaml  pyproject.toml
services/parser/app/: __init__.py  model.py  parser_orchestrator.py
services/parser/app/api_client/: __init__.py  base_client.py  coindesk_client.py  exception.py  exceptions.py
services/parser/app/api_resource/: __init__.py  coindesk_latest_news_resource.py  sendable_resource.py
services/parser/app/extractor/: __init__.py  coindesk_extractor.py  extractor_interface.py
services/parser/app/orchestration/: __init__.py  config.py  factory.py  parser_orchestrator.py
services/parser/app/storer/: __init__.py  coindesk_page_storer.py  storer_interface.py
services/parser/app/url_retriever/: __init__.py  last_coindesk_articles_retriever.py  url_retriever_interface.py
services/parser/commands/: parse_coindesk_latest_news.py
services/parser/logger/: logger.py
services/parser/logs/: app.log.1
