[tool.poetry]
name = "archive"
version = "0.1.0"
description = "Package to archive information"
authors = ["Sebastian Vieites"]

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"