[tool.poetry]
name = "parser"
version = "0.1.0"
description = "Package to parse coindesk webpage"
authors = ["Sebastian Vieites"]

[tool.poetry.dependencies]
python = "^3.12.4"
typer = "^0.12.5"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.9.2"
pytz = "^2024.2"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"